--- a/css/Estilos.css
+++ b/css/Estilos.css
@@ -2,5 +2,20 @@ body
 {
 text-align: center;
 font-family: "Helvetica";
-color: brown;
+color: #333;
+margin: 0;
+padding: 0;
+font-size: 16px;
+}
+#Container
+{
+    width: 70%;
+    padding: 1em;
+    text-align: center;
+    border: 1px solid #DDD;
+    margin: 0 auto;
+}
+#Container h1
+{
+    font-size: 20px;
 }
