--- a/css/Estilos.css
+++ b/css/Estilos.css
@@ -7,10 +7,27 @@ margin: 0;
 padding: 0;
 font-size: 16px;
 }
+
+#cabecera
+{
+background: cadetblue;
+color: white;
+font-size: 40;
+box-shadow: 0px 2px 50px 0px rgba(0,0,0,0.5);
+font-weight: bold;
+margin: 0;
+padding: 0.5em;
+}
+#cabecera #tagline
+{
+padding: 0 0 0 1em;
+font-weight: normal;
+font-size: 0.6em;
+}
 #Container
 {
     width: 70%;
-    padding: 1em;
+    padding: 0;
     text-align: center;
     border: 1px solid #DDD;
     margin: 0 auto;
@@ -18,4 +35,8 @@ font-size: 16px;
 #Container h1
 {
     font-size: 20px;
+}
+#post
+{
+padding: 1em;
 }
