--- a/css/Estilos.css
+++ b/css/Estilos.css
@@ -1,5 +1,6 @@
 body
 {
+    background: #1e1f24;
 text-align: center;
 font-family: "Arial";
 color:#333;
@@ -17,6 +18,11 @@ box-shadow: 0px 2px 50px 0px rgba(0,0,0,0.5);
 font-weight: bold;
 margin: 0;
 padding: 0.5em;
+}
+#cabecera #logo
+{
+    width: 20px;
+    vertical-align: middle;
 }
 #cabecera #tagline
 {
@@ -38,5 +44,6 @@ font-size: 0.6em;
 }
 #post
 {
+background: white;    
 padding: 1em;
 }
