--- a/css/Estilos.css
+++ b/css/Estilos.css
@@ -40,3 +40,11 @@ font-size: 0.6em;
 {
 padding: 1em;
 }
+
+#footer
+{
+    background: #777;
+    color: white;
+    text-align: center;
+    padding: 0.5em;
+}
