--- a/css/Estilos.css
+++ b/css/Estilos.css
@@ -1,6 +1,5 @@
 body
 {
-    background: #1e1f24;
 text-align: center;
 font-family: "Arial";
 color:#333;
@@ -13,22 +12,17 @@ font-size: 20px;
 {
 background: cadetblue;
 color: white;
-font-size: 40;
+font-size: 40px;
 box-shadow: 0px 2px 50px 0px rgba(0,0,0,0.5);
 font-weight: bold;
 margin: 0;
 padding: 0.5em;
 }
-#cabecera #logo
-{
-    width: 20px;
-    vertical-align: middle;
-}
 #cabecera #tagline
 {
 padding: 0 0 0 1em;
 font-weight: normal;
-font-size: 0.6em;
+font-size: 1em;
 }
 #Container
 {
@@ -44,6 +38,13 @@ font-size: 0.6em;
 }
 #post
 {
-background: white;    
 padding: 1em;
+}
+
+#footer
+{
+    background: #777;
+    color: white;
+    text-align: center;
+    padding: 0.5em;
 }
