--- a/css/Estilos.css
+++ b/css/Estilos.css
@@ -1,11 +1,10 @@
-body
-{
-text-align: center;
-font-family: "Arial";
-color:#333;
-margin: 0;
-padding: 0;
-font-size: 20px;
+body {
+    text-align: center;
+    font-family: "Arial";
+    color: #333;
+    margin: 0;
+    padding: 0;
+    font-size: 20px;
 }
 
 #cabecera
