--- a/css/Estilos.css
+++ b/css/Estilos.css
@@ -7,15 +7,14 @@ body {
     font-size: 20px;
 }
 
-#cabecera
-{
-background: cadetblue;
-color: white;
-font-size: 40px;
-box-shadow: 0px 2px 50px 0px rgba(0,0,0,0.5);
-font-weight: bold;
-margin: 0;
-padding: 0.5em;
+#cabecera {
+    background: #777;
+    color: white;
+    font-size: 40px;
+    box-shadow: 0px 2px 50px 0px rgba(0,0,0,0.5);
+    font-weight: bold;
+    margin: 0;
+    padding: 0.5em;
 }
 
 #cabecera #logo
